--- a/src/views/5sentidos2.ejs
+++ b/src/views/5sentidos2.ejs
@@ -23,6 +23,7 @@
    <!-- Tittle -->
   <div class="titles">
     <h2 style="margin-top: 100px;">5-4-3-2-1 sentidos</h2>
+    <br>
     <p>Es una técnica auto-calmante para aliviar la ansiedad, </p>
     <p>consiste en utilizar los cinco sentidos para tomar conciencia del cuerpo.aaaaa</p>
   </div>
@@ -252,6 +253,7 @@ function initMultiStepForm() {
     <div class="back">
         <a href="/misejercicios"><button>Volver</button></a>
     </div>
+    <%- include('./partials/footer') %>
 </main>
     <br>
 </html>
