--- a/src/views/ansiedad_.ejs
+++ b/src/views/ansiedad_.ejs
@@ -37,10 +37,9 @@
     <body>
 
       <div class="titles">
-          <h1>Hoja de registro de ansiedad</h1>
+          <h1 style="font-family: Poppins, sans-serif;">Hoja de registro de ansiedad</h1>
           <p>La hoja de registro de ansiedad es una forma de llevar un seguimiento de los momentos en los que se está sintiendo ansiedad, de esta forma detectar oportunidades de mejora y sus causas. 
            <!-- <p>Además si se lleva un proceso de terapia, es una gran herramienta de apoyo para dar seguimiento del tratamiento proporcionado por el terapeuta. -->
-            <br>
             <br>
             <p>Te compartimos dos archivos descargables que podrás utilizar.</p>
             </div>
