--- a/src/views/imaginacion.ejs
+++ b/src/views/imaginacion.ejs
@@ -34,4 +34,5 @@
         <a href="/misejercicios"><button>Volver</button></a>
     </div>
     </main>
+    <%- include('./partials/footer') %>
     </html>
