--- a/src/views/loader.ejs
+++ b/src/views/loader.ejs
@@ -27,4 +27,5 @@ display: flex">
 <img style="position:relative; z-index: 2; height: 500px;"src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1657502098/Por%20Ti/Por_ti_bvopba.gif">
   </div>
 </body>
+<%- include('./partials/footer') %>
 </html>
