--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -61,9 +61,9 @@
                 <br>
                 <br>
                 <br>
-                <div style="display: flex; flex-direction: row; align-items: baseline;"><input type="checkbox"></input><p class="p" style="margin-left: 15px; padding-left: 0;">Recordar mi usuario</></div>
+               <!-- <div style="display: flex; flex-direction: row; align-items: baseline;"><input type="checkbox"></input><p class="p" style="margin-left: 15px; padding-left: 0;">Recordar mi usuario</></div>-->
                 <p class="p">¿Aún no tienes una cuenta?  </p>
-                  <a href="/users/registro" style="text-align:center; left: 40%; right: 40%; position: absolute">Registrate aquí</a>
+                  <a href="/users/registro" style="text-align:center; left: 40%; right: 40%; position: absolute; margin-top: -20px;">Registrate aquí</a>
             <!--[if mso]>&nbsp;<![endif]-->
             </td>
           </tr>
@@ -80,29 +80,5 @@
           <!--Finaliza prueba-->
       </div>
 </body>
-  <!-- Site footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <h6>About</h6>
-      <hr>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2022 
-       <a href="#">Por Ti</a>.
-          </p>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-</footer>
+<%- include('./partials/footer') %>
 </html>
