--- a/src/views/organizador1.ejs
+++ b/src/views/organizador1.ejs
@@ -42,7 +42,7 @@
       <ul class="task-box"></ul>
     </div>
 
-    <div class="back">
+    <div class="back" style="margin-bottom: 100px;">
         <a href="/misejercicios"><button>Volver</button></a>
     </div>
 
@@ -156,5 +156,5 @@ taskInput.addEventListener("keyup", e => {
     </script>
 
   </body>
-
+  <%- include('./partials/footer') %>
 </html>
