--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -4,15 +4,15 @@
     <nav id="primary_nav_wrap">
         <ul>
           <% if(locals.isLogged) { %>
-            <li><a href="/listado">Ejercicios</a></li>
-            <li class="current-menu-item"><a href="/misejercicios">Mis ejercicios</a></li>
-            <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.name %></b>!</a>
+            <li><a href="/listado">Contactos</a></li>
+            <li class="current-menu-item"><a href="/users/misejercicios">Mis ejercicios</a></li>
+            <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.first_name %></b>!</a>
                   </ul>
                 </li>
             </li>
           </ul>
             <% } else { %>
-              <li class="current-menu-item"><a href="/misobjetivos">Ejercicios</a></li>
+              <li><a href="/listado">Contactos</a>
               <li><a href="/users/login">Iniciar sesión</a>
                       <li><a href="/users/registro">Registrate</a></li>
                     </ul>
