--- a/src/views/tapping.ejs
+++ b/src/views/tapping.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <title>Tapping</title>
@@ -27,7 +28,7 @@
     </div>
 
     <div class="cont">
-        <div class="cont-1" style="margin-left:200px">
+        <div class="cont-1" style="margin-left:80px">
             <p>Instrucciones:</p>
             <br>
 
@@ -73,7 +74,7 @@
     </div>
 
     <div class="back">
-        <a href="/misejercicios"><button style="margin-bottom: 50px;">Volver</button></a>
+        <a href="/misejercicios"><button style="margin-bottom: 50px; margin-right: 100px;">Volver</button></a>
     </div>
 </main>
 <br>
@@ -81,3 +82,4 @@
 <br>
 <br>
 </body>
+</html>
