--- a/src/public/css/5sentidos2.css
+++ b/src/public/css/5sentidos2.css
@@ -15,6 +15,8 @@
     --inputBorderColor: lightgray;
 }
 
+p{ font-size: 1.2em; font-family: 'Nunito', sans-serif; }
+
 body {
     display: flex;
     align-items: center;
@@ -281,6 +283,10 @@ margin-top: 40px;
     padding-right: 250px;
     padding-left: 250px;
     align-items: center;
+}
+
+.titles h2{
+    font-size: 36px;
 }
 
 .titles h1{
