--- a/src/public/css/ejercicios.css
+++ b/src/public/css/ejercicios.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +11,7 @@ main{
     width: 100%;
     background: linear-gradient(rgba(40, 37, 89), #111425);
     box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
+    overflow-x: hidden;
 }
 
 .ejercicios-top-contenedor-texto{
@@ -133,6 +137,10 @@ p{
 
 .ejercicios-box-cont{
     overflow: auto;
+    white-space: nowrap;
+}
+
+.ejercicios-box-cont2{
     white-space: nowrap;
 }
 
