--- a/src/public/css/imaginacion.css
+++ b/src/public/css/imaginacion.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .img-guiada{
 width: 80%;
 text-align: center;
@@ -21,11 +24,12 @@ html{
 
 h2{
     font-family: 'Poppins', sans-serif;
+        font-size: 36px;
 }
 
 p{
     font-family: 'Nunito', sans-serif;
-    font-size: 18px;
+   font-size: 1.2em; 
 }
 
 .back{
