--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .nav-gradient{
 	background: linear-gradient(rgb(17, 20, 37), rgba(17, 20, 37, 0));
@@ -44,7 +46,7 @@ nav *{
 	list-style:none;
 	justify-content: space-between;
 	float:center;
-	gap: 80px;
+	gap: 60px;
 	margin:0;
 	padding:0;
 }
