--- a/src/public/css/respiracion.css
+++ b/src/public/css/respiracion.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
     --primary-color: linear-gradient(rgb(78, 74, 155), #111425);
     --secondary-color: #8784ee;
@@ -60,6 +63,8 @@ h1,p,input {
     text-align: center;
     font-size: 21px;
 }
+
+p{ font-size: 1.2em; font-family: 'Nunito', sans-serif; }
 
 label {
     color: lavender;
