--- a/src/public/css/todo.css
+++ b/src/public/css/todo.css
@@ -1,5 +1,7 @@
 /* Import Google Font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -12,6 +14,7 @@ body{
   overflow: hidden;
   background: linear-gradient(135deg, #4AB1FF, #2D5CFE);
 }
+p{ font-size: 1.2em; font-family: 'Nunito', sans-serif; };
 ::selection{
   color: #fff;
   background: #3C87FF;
