--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,30 +32,7 @@
      <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
     </head>
 
-     <!--Menu-->
- <div class="nav-gradient">
-  <a href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu"></img></a>
-  <nav id="primary_nav_wrap">
-      <ul>
-        <% if(locals.isLogged) { %>
-          <li><a href="/listado">Ejercicios</a></li>
-          <li class="current-menu-item"><a href="/misejercicios">Mis ejercicios</a></li>
-          <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.name %>!</b></a>
-                </ul>
-              </li>
-          </li>
-        </ul>
-          <% } else { %>
-            <li class="current-menu-item"><a href="/misobjetivos">Ejercicios</a></li>
-            <li><a href="/users/login">Iniciar sesión</a>
-                    <li><a href="/users/registro">Registrate</a></li>
-                  </ul>
-                </li>
-            </li>
-          </ul>
-            <% } %>
-      </nav>
-  </div>
+    <%- include('./partials/nav') %>  
 
 <body>
         <!--Banner--> 
@@ -66,17 +43,24 @@
           <h1>Mejora tu salud</h1>
           </div>
           <div class="smallTitle">
-              <h2 style="text-align:left; font-weight: 300;">Contenido personalizado para tu bienestar y mejorar el área de salud que desees.</h2>
+              <h2 style="text-align:left; font-weight: 300; font-size: 28px;">Contenido personalizado para tu bienestar y mejorar el área de salud que desees.</h2>
             </div>
         </div>
           </div>
           </div>
 
-          <div class="buttonBanner"><a href="/users/registro"><button>Continuar</button></a></div>
+          <% if(locals.isLogged) { %>
+            <div class="buttonBanner" style="margin-top:-15px">
+              <a href="/users/misejercicios"><button type="button">Continuar</button></a></div>
+            <% } else { %>
+          <div class="buttonBanner" style="margin-top:-15px">
+          <a href="/users/registro"><button type="button">Continuar</button></a></div>
+          <% } %>
+
       
             <!--Estrellas--> 
 
-    <div class="scene">
+    <div class="scene" style="height: 1800px; margin-bottom: -15px;">
         <script type="text/javascript">
             function stars(){
                 let count = 500;
@@ -123,7 +107,8 @@
         
         <div class="img-beneficios">
             <img src="/img/ventaja2.png" class="beneficios">
-            <h3 style="padding-left: 30px; padding-right: 30px; margin-bottom: 15px;">Contenido para sentirte mejor</h3>
+            <br>
+            <h3 style="padding-left: 30px; padding-right: 30px; margin-top:15px; margin-bottom: 10px;">Contenido para sentirte mejor</h3>
             <br>
             <br>
             <br>
@@ -182,11 +167,13 @@
                 <img src="/img/img-quienes-somos.png" class="quienes-somos">
                 <img src="/img/img-quienes-somos.png" class="quienes-somos">
             </div>
-            <p style="margin-bottom: 100px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis odio odio sed eu nec. Gravida pellentesque auctor mattis eget.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis odio odio sed eu nec. Gravida pellentesque auctor mattis eget.</p>
           </main>
         <img src="/img/Hojas1.png" class="hoja1">
         <img src="/img/Hojas3.png" class="hoja2">
        </div>
+       </div>
+       <%- include('./partials/footer') %>
 </body>
 </html>
 
