--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -27,7 +27,7 @@
 <div class="cont-listado">
 
   <div class="cont-listado-hijo">
-    <img src="/img/lineadelavida.jpeg" style="width: 265px">
+    <img src="/img/lineadelavida.jpeg" style="width: 265px; position:relative; left: 5px;">
 <div class="cont-listado-hijo-text">
     <h2>La línea de la vida</h2>
     <div class="icon-flex">
@@ -40,8 +40,8 @@
   </div>
   </div>
 
-  <div class="cont-listado-hijo">
-    <img src="/img/origen.jpeg" style="width: 265px">
+  <div class="cont-listado-hijo" style="text-align: center;">
+    <img src="/img/origen.jpeg" style="width: 265px; position:relative; left: 5px;">
     <div class="cont-listado-hijo-text">
     <h2>Fundación Origen</h2>
     <div class="icon-flex">
@@ -55,7 +55,7 @@
   </div>
 
   <div class="cont-listado-hijo">
-    <img src="/img/lineauam.png" style="width: 265px">
+    <img src="/img/lineauam.png" style="width: 265px; position:relative; left: 5px;">
     <div class="cont-listado-hijo-text">
     <h2>Línea UAM</h2>
     <div class="icon-flex">
@@ -72,8 +72,8 @@
   </div>
   </div>
 
-  <div class="cont-listado-hijo">
-    <img src="/img/consejo.png" style="width: 265px;" >
+  <div class="cont-listado-hijo" style="text-align: center;">
+    <img src="/img/consejo.png" style="width: 265px; position:relative; left: 5px;" >
     <div class="cont-listado-hijo-text">
     <h2>Consejo Ciudadano para la Seguridad y Justicia de la CDMX</h2>
     <div class="icon-flex">
