Se agregaron alimentos del dia

--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -78,7 +78,7 @@
         <main>
         <div class="ejercicios-top-contenedor">
 
-          <a href="https://por-ti-recetas.herokuapp.com/"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
+          <a href="/ejercicios/alimentos"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
                 <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503255/Por%20Ti/ejercicios-card1_bqpyfa.svg" style="width: 100%">
             </div></a>
 
