--- a/src/views/5sentidos2.ejs
+++ b/src/views/5sentidos2.ejs
@@ -25,7 +25,7 @@
     <h2 style="margin-top: 100px;">5-4-3-2-1 sentidos</h2>
     <br>
     <p>Es una técnica auto-calmante para aliviar la ansiedad, </p>
-    <p>consiste en utilizar los cinco sentidos para tomar conciencia del cuerpo.aaaaa</p>
+    <p>consiste en utilizar los cinco sentidos para tomar conciencia del cuerpo.</p>
   </div>
   
   <body>
