Se modificaron iconos de redes

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -14,7 +14,7 @@
                 <h3 class="titulo-redes" style="margin:10px 0">¡Síguenos!</h3>
                 <br>
                 <a href="facebook">
-                    <img class="redes" src = '/img/icon-fb.png' alt='facebook'>
+                    <img class="redes" src = '/img/facebook.png' alt='facebook'>
                 </a>
                 <a href="instagram">
                     <img class="redes" src = '/img/insta.png' alt='instagram'>
